--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<<head th:replace="fragments :: head"></head>
+<head th:replace="fragments :: head"></head>
 <body class="container">
 
 <header th:replace="fragments :: header"></header>
@@ -8,13 +8,13 @@
 <form method="post">
     <div class="form-group">
         <label>Username
-            <input class="form-control" th:field="${registrationFormDTO.username}" />
+            <input class="form-control" th:field="${registerFormDTO.username}" />
         </label>
         <p class="error" th:errors="${registerFormDTO.username}"></p>
     </div>
     <div class="form-group">
         <label>Password
-            <input class="form-control" th:field="${registrationFormDTO.password}" type="password"/>
+            <input class="form-control" th:field="${registerFormDTO.password}" type="password"/>
         </label>
         <p class="error" th:errors="${registerFormDTO.password}"></p>
     </div>
